# pygpseq

./: .gitignore  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  TODO.md  pyGPSeq_run.py  pygpseq-run.py  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  make.bat  pygpseq.wraps.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree  pygpseq.doctree  pygpseq.tools.doctree  pygpseq.wraps.doctree  setup.doctree
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  pygpseq.html  (+5 more)
docs/_static/: changelog.rst  howto.rst  intro.rst
pygpseq/: __init__.py  const.py  main.py
pygpseq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pygpseq/anim/: __init__.py  analysis.py  condition.py  main.py  nucleus.py  series.py
pygpseq/fish/: __init__.py  dot.py  image.py  nucleus.py
pygpseq/scripts/: __init__.py  czi_to_tiff.py  gpseq_anim.py  gpseq_fromfish.py  gpseq_fromfish_merge.py  nd2_to_tiff.py  tiff_auto3dseg.py  tiff_desplit.py  tiff_findoof.py  tiff_split.py  tiffcu.py
pygpseq/static/: report_template.html
pygpseq/tests/: test_single_run.py
pygpseq/tools/: __init__.py  binarize.py  chromab.py  distance.py  image.py  io.py  path.py  plot.py  stat.py  string.py  vector.py
pygpseq/wraps/: analysis.py  condition.py  nucleus.py  series.py
sample/: paramTable.tsv  pyGPSeq_run.py  pyGPSeq_run_batch.sh  pyGPSeq_run_from_table.py
tests/: context.py  test_sample.py
tests/test_data_1/: cy5.channel01.series001.tif
tests/test_data_2/: dapi.channel01.series001.tif
tools/: README.md  analyze_dots.py  dotter2gpseq.py  dotter2gpseq_merge.R
tools/test/: generate_mock.py  mock.csv
(+31 files in other folders)
